# synapse-agentic

./: .env  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_README.md  README.md  REPORT_RUST_ADK_MIGRATION.md  SRC.md  STATE.md  synapse_check_v3.txt
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md  CONTEXT_LOG.md  PROJECT_README.md  SRC.md  TODO.md  features.json
docs/SRC/: DATABASE.md  GLOSSARY.md  INTERFACES.md  NON-FUNCTIONAL.md  REQUIREMENTS.md  index.md
examples/: mcp_server.rs  multi_llm.rs  reflection_loop.rs  simple_agent.rs
src/: lib.rs  telemetry.rs
src/channels/: domain.rs  mod.rs  ports.rs
src/channels/adapters/: manager.rs  mod.rs  rate_limiter.rs  slack.rs  websocket.rs
src/compaction/: domain.rs  mod.rs  ports.rs
src/compaction/adapters/: llm_summarizer.rs  mod.rs  token_estimator.rs
src/decision/: context.rs  engine.rs  mod.rs  provider.rs  skill.rs
src/decision/provider/: gemini.rs  minimax.rs  mod.rs
src/framework/: agent.rs  bus.rs  hive.rs  memory.rs  mod.rs
src/framework/workflow/: graph.rs  mod.rs  node.rs  reflection.rs  state.rs
src/mcp/: http_transport.rs  mod.rs  prompt.rs  registry.rs  resource.rs  server.rs  tool.rs
src/parser/: domain.rs  mod.rs  ports.rs
src/parser/adapters/: heuristic_repair.rs  json_extractor.rs  markdown_cleaner.rs  mod.rs  pipeline.rs
src/persistence/: adapter.rs  config.rs  manager.rs  mod.rs  pgvector.rs  postgres.rs  surreal.rs
src/resilience/: domain.rs  mod.rs  ports.rs
src/resilience/adapters/: cooldown_store.rs  mod.rs  rotator.rs
src/security/: domain.rs  mod.rs  ports.rs
src/security/adapters/: json_validator.rs  mod.rs  pii_redactor.rs
