[package]
name = "synapse-agentic"
version = "0.1.0"
description = "A modern Rust framework for building AI-native agentic systems with MCP support"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/iberi22/synapse-agentic"

[features]
default = ["mcp", "llm-providers", "db-surreal"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
mcp = []
llm-providers = ["openrouter", "deepseek", "gemini", "grok"]
openrouter = []
deepseek = []
gemini = ["dep:oauth2", "dep:base64"]
grok = []
db-surreal = ["dep:surrealdb"]
db-postgres = []
db-pgvector = []
mcp-http = ["dep:axum", "dep:tower", "dep:tower-http"]
full = ["mcp", "llm-providers", "mcp-http", "db-surreal", "db-postgres", "db-pgvector"]

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
regex = "1.11"
rand = "0.9"
sha2 = "0.10"
surrealdb = { version = "2", features = ["kv-surrealkv", "kv-mem"], optional = true }
axum = { version = "0.8.1", features = ["ws", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"], optional = true }
oauth2 = { version = "5.0", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "simple_agent"
path = "examples/simple_agent.rs"
